--- a/app/parameters/option.css
+++ b/app/parameters/option.css
@@ -1,19 +1,27 @@
-.container {
-    background-color: pink;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
+    justify-content: center;
     background-color: #f4f4f4;
   }
-  
+
 .container {
   display: flex;
-  width: 100vw;
+  width: 50vw;
   height: 100vh;
+}
+
+#menu-container {
+  display: flex;
+  height: 100%;
+}
+
+#content-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar {
@@ -39,21 +47,28 @@ body {
 }
 
 .sidebar nav ul li.active {
+  background-color: #3B81AC1A;
+  border-radius: 5px;
   font-weight: bold;
-  color: #007bff;
+  color: black;
 }
 
 .content {
   flex-grow: 1;
   padding: 30px;
-  background: white;
-  border-radius: 10px;
+  background: #3B81AC1A;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
   font-size: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+}
+
+h2 {
+  font-size: 20px;
+  margin-bottom: 10px;  
+  font-style: normal;
 }
 
 .section {
@@ -67,6 +82,7 @@ label {
 
 button {
   padding: 10px 15px;
+  margin: 0;
   background-color: #007bff;
   color: white;
   border: none;
@@ -83,7 +99,15 @@ img {
   object-fit: contain;
 }
 
-#links>li :hover{
-    background-color: red;
+.select {
+  padding: 10px 15px;
+  background-color: white;
+  color: black;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
+.checkbox {
+  border: none;
+}
